--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "@types/react": "^18.0.8",
     "@types/react-dom": "^18.0.2",
     "react": "^18.1.0",
-    "react-dom": "^18.1.0"
+    "react-confetti": "^6.1.0",
+    "react-dom": "^18.1.0",
+    "react-use": "^17.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
