--- a/package.json
+++ b/package.json
@@ -3,15 +3,15 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@babel/core": "^7.0.0",
-    "@emotion/react": "^11.5.0",
-    "@emotion/styled": "^11.3.0",
-    "@mui/material": "^5.10.12",
-    "@types/react": "^18.0.8",
-    "@types/react-dom": "^18.0.2",
-    "react": "^18.1.0",
+    "@babel/core": "7.19.6",
+    "@emotion/react": "11.10.5",
+    "@emotion/styled": "11.10.5",
+    "@mui/material": "5.10.12",
+    "@types/react": "18.0.25",
+    "@types/react-dom": "18.0.8",
+    "react": "18.2.0",
     "react-confetti": "^6.1.0",
-    "react-dom": "^18.1.0",
+    "react-dom": "18.2.0",
     "react-use": "^17.4.0"
   },
   "scripts": {
